2002-04-08  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* gnumeric-cell-renderer-toggle.[ch] : new, essentially
	  gnumeric-cell-renderer.[ch] rewritten as a subclass
	* gnumeric-cell-renderer.[ch] : deleted
	* Makefile.am : replace gnumeric-cell-renderer.[ch] by
	   gnumeric-cell-renderer-toggle.[ch]

2002-04-05  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* gnumeric-expr-entry.c (gnm_expr_entry_rangesel_start) : set
	  rangesel::is_valid even for empty text
	(gee_init) : initialize rangesel::scg
	(cb_gee_button_press_event) : new
	(cb_gee_key_press_event) : move some code into cb_entry_changed
	(cb_entry_changed) : also handle key press induced changes

2002-04-05  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* gnumeric-expr-entry.c : add rangesel::is_valid
	(gee_init) : initialize rangesel::is_valid
	(gee_rangesel_reset) : set rangesel::is_valid
	(gnm_expr_entry_rangesel_start) : set rangesel::is_valid and 
	  rangesel::sheet
	(cb_gee_key_press_event) : ignore single shift and alt keys
	(gnm_expr_entry_get_rangesel) : return a 
	  boolean indicating whether the range selection is valid.
	(gnm_expr_entry_can_rangesel) : use rangesel::is_valid
	* gnumeric-expr-entry.h (gnm_expr_entry_get_rangesel) : return a 
	  boolean indicating whether the range selection is valid.

2002-04-04  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* gnumeric-expr-entry.c (gnm_expr_entry_rangesel_start) extract
	  parsing into src/parse-util.c 

2002-04-02  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* gnumeric-cell-renderer-expr-entry.[ch] : make this widget a subclass
	  of gnumeric-cell-renderer-text rather than 
	  gtkcellrenderertext.
	* gnumeric-cell-renderer-text.c : mark editable fields with a frame to
	  make them more visible.

2002-04-02  Andreas J. Guelzow <aguelzow@taliesin.ca>

	*  gnumeric-expr-entry.c (gnm_expr_entry_rangesel_start): A
	second cut at utf8 (or a first cut at the second half of this 
	function)
	
2002-04-02  Morten Welinder  <terra@diku.dk>
